# to_do_app

./: .flake8  README.md  config.py  mypy.ini  pyproject.toml  td
controller/: tasks.py
saved_files/: to_do_list.json  to_do_list.txt
tests/: test_api.py
to_do_app/: __init__.py  api.py  cli.py  config.py  run.py
to_do_app/saved_files/: to_do_list.txt
